--- a/RPG/index.html
+++ b/RPG/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <title>RPG - Dragon Repeller</title>
+    
 </head>
 <body>
     <div id="game">
@@ -18,9 +19,12 @@
             <button type="button" id="button2">Go to cave</button>
             <button type="button" id="button3">Fight dragon</button>
         </div>
-        <div id="monsterStats"></div>
+        <div id="monsterStats">
+            <span class="stat">Monster Name: <strong><span id="monsterName"></span></strong></span>
+            <span class="stat">Health: <strong><span id="monsterHealth"></span></strong></span>
+        </div>
         <div id="text"></div>
     </div>
-    
+    <script src="./script.js"></script>
 </body>
 </html>
